cmake_minimum_required(VERSION 3.7)
project(strongswan-import)

set(CMAKE_CXX_STANDARD 14)
find_package(PkgConfig REQUIRED)
set(CMAKE_C_FLAGS "-fsanitize=address -g")
set(CMAKE_CXX_FLAGS "-fsanitize=address -g")

pkg_search_module(GLIB glib-2.0)
pkg_search_module(JSON json-glib-1.0)
pkg_search_module(LIBNM libnm)
include_directories(${LIBNM_INCLUDE_DIRS})
include_directories(${GLIB_INCLUDE_DIRS})
include_directories(${JSON_INCLUDE_DIRS})
link_libraries(${GLIB_LIBRARIES})
link_libraries(${JSON_LIBRARIES})
link_libraries(${LIBNM_LIBRARIES})
add_library(strongswan_profile STATIC strongswan_profile.c)
set(SOURCE_FILES main.cpp)
add_executable(strongswan-import ${SOURCE_FILES})
target_link_libraries(strongswan-import strongswan_profile)
