cmake_minimum_required(VERSION 3.7)
project(strongswan-import)

set(CMAKE_CXX_STANDARD 14)
find_package(PkgConfig REQUIRED)
set(CMAKE_CXX_COMPILER "clang++")
set(CMAKE_C_COMPILER "clang")
set(CMAKE_C_FLAGS "-fno-omit-frame-pointer -g -fsanitize=address -fsanitize-coverage=trace-pc-guard")
set(CMAKE_CXX_FLAGS "-fno-omit-frame-pointer -g -fsanitize=address -fsanitize-coverage=trace-pc-guard")

pkg_search_module(GLIB glib-2.0)
pkg_search_module(JSON json-glib-1.0)
pkg_search_module(LIBNM libnm)
include_directories(${LIBNM_INCLUDE_DIRS})
include_directories(${GLIB_INCLUDE_DIRS})
include_directories(${JSON_INCLUDE_DIRS})
include_directories(/home/ubuntu/src/strongswan/src/libstrongswan)
link_libraries(${GLIB_LIBRARIES})
link_libraries(${JSON_LIBRARIES})
link_libraries(${LIBNM_LIBRARIES})
link_libraries(/usr/local/lib/ipsec/libstrongswan.so)
add_library(strongswan_profile STATIC strongswan_profile.c)
set(SOURCE_FILES main.cc)
add_executable(fuzz fuzz.cc strongswan_profile.c strongswan_profile.hh)
target_link_libraries(fuzz /usr/lib/llvm-4.0/lib/libFuzzer.a)
add_executable(strongswan-import ${SOURCE_FILES})
target_link_libraries(strongswan-import strongswan_profile)
